styles.css
body, html {
    height:100%;
}

body {
    font-family: 'Lato', sans-serif;
    box-sizing: border-box;
    margin: 0;
    background-color: #FAFAFA;
}

header {
    max-width: 100vw;
    background-color: #ff8573;
    color: #fafafa;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding: 0 25px;
    border-bottom-left-radius: 75px;
}


.circle {
    width: 600px;
    height: 600px;
    display: inline-block;
    border-radius: 50%;
    position:absolute;
    margin-left: 5%;
    background-color: #f87763;
    top: 80px;
}

.circle-sm {
    background-color: #f87763;
    width: 200px;
    height: 200px;
    display: inline-block;
    border-radius: 50%;
    position: absolute;
    top: 50px;
    right: 0px;
}

.circle-md {
    background-color: #f87763;
    width: 400px;
    height: 400px;
    display: inline-block;
    border-radius: 50%;
    position: absolute;
    top: -275px;
    left: 45%;
}


.rectangle {
    border-radius: 75px;
    display: inline-block;
    width: 400px;
    height:400px;
    position: absolute;
    background-color: #f87763;
    
   
}

#rect1 {
    transform: rotate(30deg);
    top: -50%;
    right: 90px;
}

#rect2 {
    transform: rotate(35deg);
    right: -325px;
    top: -80px;
}

#rect3 {
    transform: rotate(35deg);
    right: -100px;
    bottom: -10px;
}

#nav {
    z-index: 3;
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
}

nav {
    display: flex;
    align-items: center;
    z-index: 3;
}

.accountAccess {
    display: flex;
    align-items:center;
    z-index: 3;
}

#login {
    display: inline-block;
}

.button {
    padding: 8px 20px;
    color:#ff8573;
    background-color: #fafafa;
    display: inline-block;
    border: none;
    border-radius: 20px;
    margin-left: 15px;
    font-weight: 700;
}

.button-nonactive {
    padding: 8px 20px;
    border: 1px solid #FAFAFA;
    border-radius: 20px;
    margin-left: 15px;
    font-weight: 700;
}

#header-content {
    display: flex;
    width: 100%;
    z-index: 3;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    margin-top: 75px;
}


.fa-angle-down {
    color: #fafafa;
}


a {
    list-style: none;
    text-align: center;
    text-decoration: none;
    display: block;
    float: left;
    margin: 0 20px;
    color: #fafafa;
}

.menu-links {
    margin-left: 30px;
}

.icon {
    display: none;
}

a:hover:not(:first-child ){
    background-color: #FAFAFA;
    color: #ff8573;
}

.title {
    font-family: 'Montserrat', sans-serif;
    font-size: 36px;
    display: inline-block;
    width: fit-content;
    margin: 0;

}


#section-one {
    background-color: #FAFAFA;
    position: relative;
    height: 825px;
    z-index: 4;
    padding: 100px 0;
}

.sectionTitle {
    font-size: 24px;
    font-weight:700;
    text-align: center;
    display: block;
    margin-bottom: 50px;
    z-index:3;
}

.midsection {
    display: flex;
    flex-wrap: wrap;
    text-align: left;
    justify-content: space-around;
    align-items:center;
}

.description {
    display: flex;
    flex-direction: column;
    max-width: 400px;
    text-align: left;
    padding-left: 50px;
}


#img {
    display: flex;
}

img {
    width: 400px;
    height: auto;
    border-radius: 25px;
}

/* second section content */

#second-section {
    position:relative;
    background: linear-gradient(235deg,#7374bb, #343572);
    border-bottom-left-radius: 80px;
    border-top-right-radius: 80px;
    height: 300px;
}

.fa-mobile {
    color: #f87763;
    font-size: 300px;
    position: relative;
    top: -50px;
    left: 15%;
    z-index: 4;
}

.fa-columns {
    font-size: 400px;
    color: #343572;
}

.phone2 {
    color:#ff8573;
    font-size: 300px;
    position: relative;
    top: 25px;
    left: 20%;
    z-index: 4;
}

.stateOfArt {
    position: relative;
    max-width: 350px;
    color: #FAFAFA;
    margin-right: 25px;
    float:right;
    z-index: 4;
}

/* third section */

#section-three {
    /* position: relative;
    height: 600px;
    padding: 25px;
    margin-top: 75px; */
    display: flex;
    justify-content: center;
    margin-top: 100px;
}

#section-three-article {
    display: flex;
    flex-direction: column;
    max-width: 350px;
    /* max-width: 350px;
    float: right; */
    
}

.article {
    line-height: 1.6;
}

.laptop {
    /* display: inline;
    float:left; */
    display: inline-block;
    margin-right: 100px;
}

.fa-laptop {
    font-size: 350px;
    margin-left: 50px;
    color:#343572;
}

/* Footer Styling */

footer {
    display: flex;
    color: #FAFAFA;
    background: linear-gradient(235deg,#7374bb, #343572);
    border-bottom-left-radius: 80px;
    border-top-right-radius: 80px;
    justify-content: space-evenly;
    align-items:flex-start;
    margin-top: 200px;
}

.footer-container {
    font-size: 11px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-evenly;
    padding: 20px 5px;
}

.footer-container-header {
    display: flex;
    margin-left: 20px;
}

.footer-link {
    text-decoration: none;
    line-height: 1.6;
}



/* Media Queries */

@media only screen and (max-width: 990px){
    .menu-links a:not(:first-child) {display:none;}
    .menu-links a.icon {
        font-size: 36px;
        float: left;
        display: block;
        margin-left: 0;
    }

    .circle {
        width: 85vw;
        height: 70vw;
        top: 100px;
        left: 10vw;
    }


    .description {
        padding: 0;
        max-width: 350px;
        margin-left: 20px;
        margin-bottom: 25px;
    }
    button {
        margin-left: 0;
    }

    .midsection {
        flex-direction: column;
    }


    #second-section {
        margin-top: 125px;
        margin-bottom: 250px;
        height: 200px;
    }

    .fa-mobile {
        font-size: 190px;
    }
    .stateOfArt {
        float: none;
        margin: 50px auto;
        color:#191919;
    }
    #section-three-article {
        margin-top: 25px;
    }

    #section-three {
        display: flex;
        flex-direction: column;
        align-items:center;
        justify-content: space-around;
        margin-top: 300px;
    }

    .article {
        margin-top: 0;
    }

    .laptop {
        margin-right: 0;
    }
    .fa-laptop {
        margin-left: 0;
    }

    .fa-columns, .fa-laptop {
        font-size: 300px;
    }

    .circle-sm {
        background-color: #f87763;
        width: 100px;
        height: 100px;
        display: inline-block;
        border-radius: 50%;
        position: absolute;
        top: 50px;
        left: 0px;
    }
    
    .circle-md {
        background-color: #f87763;
        width: 300px;
        height: 300px;
        display: inline-block;
        border-radius: 50%;
        position: absolute;
        top: -225px;
        left: 45%;
    }

}

@media screen and (max-width: 990px){
    .menu-links.responsive {position:relative;}

    .menu-links.responsive a {
        float: none;
        display:block;
        text-align: left;
        margin: 0;
        padding: 5px;
    }

    .menu-links.responsive a:hover:not(:first-child) {
        color: #ff8573;
        background-color: #fafafa;
    }
}

@media screen and (max-width:650px){
    .content-title {
        font-size: 28px;
    }

  
}

@media screen and (max-width:400px){

    img {
        width: 300px;
    }

    .fa-columns {
        font-size: 250px;
    }

    .fa-laptop {
        font-size: 250px;
        margin-top: 75px;
    }

    #second-section {
        margin-top: 75px;
        height: 150px;
    }

    .content-title {
        font-size: 21px;
    }
}

